--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ six==1.17.0
 sqlparse==0.5.3
 text-unidecode==1.3
 typing_extensions==4.14.0
+celery==5.3.6
+redis==4.6.0
+django-celery-beat==2.5.0
+gql==3.4.1
+requests==2.31.0
