--- a/crm/requirements.txt
+++ b/crm/requirements.txt
@@ -1,8 +1,9 @@
-django-crontab==0.7.1
-gql==3.4.0
-requests==2.31.0
-graphene-django==3.1.5
-django-filter==23.5
-celery==5.3.6
-redis==5.0.3
-django-celery-beat==4.3.1
+Django>=4.2.0
+graphene-django>=3.0.0
+django-crontab>=0.7.1
+celery>=5.3.0
+django-celery-beat>=2.5.0
+redis>=4.5.0
+psycopg2-binary>=2.9.0
+python-decouple>=3.8
+gunicorn>=21.2.0
